--- a/index.html
+++ b/index.html
@@ -26,45 +26,52 @@
         <section id="projects" class="projects">
             <h2>我的项目</h2>
             <div class="project-grid">
-                <!-- 俄罗斯方块项目 -->
+                <!-- 小游戏合集 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <!-- 使用SVG作为项目预览图 -->
-                        <svg viewBox="0 0 200 200" class="tetris-preview">
-                            <rect x="40" y="40" width="30" height="30" fill="#007AFF"/>
-                            <rect x="70" y="40" width="30" height="30" fill="#007AFF"/>
-                            <rect x="100" y="40" width="30" height="30" fill="#007AFF"/>
-                            <rect x="130" y="40" width="30" height="30" fill="#007AFF"/>
-                            <rect x="70" y="80" width="30" height="30" fill="#FF3B30"/>
-                            <rect x="100" y="80" width="30" height="30" fill="#FF3B30"/>
-                            <rect x="70" y="110" width="30" height="30" fill="#FF3B30"/>
-                            <rect x="40" y="140" width="30" height="30" fill="#4CD964"/>
-                            <rect x="70" y="140" width="30" height="30" fill="#4CD964"/>
-                            <rect x="100" y="140" width="30" height="30" fill="#4CD964"/>
+                        <!-- 更新SVG为游戏合集图标 -->
+                        <svg viewBox="0 0 200 200" class="games-preview">
+                            <!-- 游戏手柄形状 -->
+                            <rect x="40" y="60" width="120" height="80" rx="40" fill="#007AFF"/>
+                            <circle cx="85" cy="100" r="15" fill="#ffffff"/>
+                            <rect x="130" y="85" width="10" height="10" rx="2" fill="#ffffff"/>
+                            <rect x="145" y="85" width="10" height="10" rx="2" fill="#ffffff"/>
+                            <rect x="130" y="100" width="10" height="10" rx="2" fill="#ffffff"/>
+                            <rect x="145" y="100" width="10" height="10" rx="2" fill="#ffffff"/>
                         </svg>
                     </div>
                     <div class="project-info">
-                        <h3>俄罗斯方块</h3>
-                        <p>使用HTML5 Canvas开发的经典俄罗斯方块游戏，支持难度选择和音效。</p>
+                        <h3>小游戏合集</h3>
+                        <p>包含经典的贪吃蛇和俄罗斯方块等游戏，使用HTML5 Canvas开发，支持难度选择和音效。</p>
                         <div class="project-links">
-                            <a href="tetris/index.html" class="button">试玩游戏</a>
-                            <a href="https://github.com/yourusername/tetris" class="button secondary">查看代码</a>
+                            <a href="games/index.html" class="button">开始游戏</a>
+                            <a href="https://github.com/baiyiqingxiang0/personal-website" class="button secondary">查看代码</a>
                         </div>
                     </div>
                 </div>
 
-                <!-- 目标检测项目（预留） -->
-                <div class="project-card coming-soon">
+                <!-- 目标检测项目 -->
+                <div class="project-card">
                     <div class="project-image">
                         <svg viewBox="0 0 200 200" class="detection-preview">
-                            <rect x="30" y="30" width="140" height="140" fill="none" stroke="#007AFF" stroke-width="2"/>
-                            <rect x="50" y="50" width="60" height="60" fill="none" stroke="#FF3B30" stroke-width="2"/>
-                            <text x="100" y="100" text-anchor="middle" fill="#666">即将推出</text>
+                            <!-- 更新的SVG图标 -->
+                            <rect x="20" y="20" width="160" height="120" fill="#f5f5f7" stroke="#007AFF" stroke-width="2"/>
+                            <rect x="40" y="40" width="60" height="60" fill="none" stroke="#FF3B30" stroke-width="2" rx="4"/>
+                            <text x="70" y="80" text-anchor="middle" fill="#FF3B30" font-size="12">目标</text>
+                            <rect x="120" y="60" width="40" height="40" fill="none" stroke="#4CD964" stroke-width="2" rx="4"/>
+                            <text x="140" y="85" text-anchor="middle" fill="#4CD964" font-size="10">物体</text>
+                            <rect x="30" y="150" width="140" height="20" fill="#007AFF" rx="4"/>
+                            <text x="100" y="164" text-anchor="middle" fill="white" font-size="12">实时目标检测</text>
                         </svg>
                     </div>
                     <div class="project-info">
-                        <h3>目标检测项目</h3>
-                        <p>正在开发中的目标检测项目，敬请期待...</p>
+                        <h3>目标检测</h3>
+                        <p>基于深度学习的实时目标检测系统，支持PCB缺陷和安全帽佩戴检测。</p>
+                        <div class="project-links">
+                            <!-- 云服务器将地址改为http://ip:5000/ -->
+                            <a href="http://localhost:5000"class="button">项目演示</a>  
+                            <a href="https://github.com/baiyiqingxiang0/personal-website" class="button secondary">查看代码</a>
+                        </div>
                     </div>
                 </div>
             </div>
